k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qlink-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qlink-server
  template:
    metadata:
      labels:
        app: qlink-server
    spec:
      containers:
      - name: qlink-server
        image: SERVER_IMAGE
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: qlink-server-service
spec:
  selector:
    app: qlink-server
  ports:
  - port: 3001
    targetPort: 3001
  type: ClusterIP
