k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qlink-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "qlink-cert"
spec:
  rules:
  - host: team16.cs144.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: qlink-server-service
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qlink-client-service
            port:
              number: 80
